Update project to remove old data

--- a/FileUploader/angular.json
+++ b/FileUploader/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PA2": {
+    "FileUpload": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/PA2",
+            "outputPath": "dist/FileUpload",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -45,18 +45,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "PA2:build"
+            "browserTarget": "FileUpload:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "PA2:build:production"
+              "browserTarget": "FileUpload:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PA2:build"
+            "browserTarget": "FileUpload:build"
           }
         },
         "test": {
@@ -80,7 +80,7 @@
         }
       }
     },
-    "PA2-e2e": {
+    "FileUpload-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -88,11 +88,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "PA2:serve"
+            "devServerTarget": "FileUpload:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "PA2:serve:production"
+              "devServerTarget": "FileUpload:serve:production"
             }
           }
         },
@@ -106,5 +106,5 @@
       }
     }
   },
-  "defaultProject": "PA2"
+  "defaultProject": "FileUpload"
 }
